--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -46,8 +46,8 @@
       <tr>
         <td><%= post.id %></td>
         <td><%= link_to post.title, post_path(post) %></td>
-        <td><%= post.start_date.strftime('%Y-%m-%d %H:%M') %></td>
-        <td><%= post.end_date.strftime('%Y-%m-%d %H:%M') %></td>
+        <td><%= post.start_date&.strftime('%Y-%m-%d %H:%M') %></td>
+        <td><%= post.end_date&.strftime('%Y-%m-%d %H:%M') %></td>
       </tr>
     <% end %>
   </tbody>
